--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: 软件安装记录
+author: Yunyusha
+email: 576462286@qq.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+解决Pycharm打汉字时,提示框不跟随问题
 
 # social links
 twitter_username: your-twitter-handle
